# CCD

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  DOCKER.md  EMBEDDED-DATABASE-MIGRATION.md  GTK4-CONVERSION-SUMMARY.md  INTEGRATION.md  LICENSE  MODERNIZATION-PLAN.md  Makefile  README.md  SETUP.md  UNIFIED-RUST-ARCHITECTURE.md  build-deb.sh  docker-compose.dev.yml  docker-compose.yml
.github/workflows/: release.yml
cli/: README.md  go.mod  main.go
cli/commands/: diff.go  pull.go  push.go  status.go  switch.go
daemon/: .dockerignore  Dockerfile  README.md  go.mod  main.go
daemon/api/: pocketbase.go
daemon/extractor/: facts.go
daemon/ledger/: continuity.go
daemon/monitor/: parser.go  watcher.go  watcher_enhanced.go
daemon/smart/: analyzer.go  diff.go
daemon/types/: conversation.go
debian/: cct-daemon.service.template  cct-launcher  cct-pocketbase.service  cct.desktop  control  postinst  postrm  prerm
frontend/: .dockerignore  Dockerfile  index.html  nginx.conf  package.json
frontend/src/: App.tsx  index.css  types.ts
frontend/src/components/: CompressedContext.tsx  ContextEditor.tsx  DiffViewer.tsx  FactsList.tsx  ProjectCard.tsx  ProjectList.tsx  SectionEditor.tsx  SessionMonitor.tsx
frontend/src/hooks/: useContext.ts  usePocketBase.ts  useProjects.ts
frontend/src/lib/: markdown.ts
frontend/src/pages/: Dashboard.tsx  ProjectDetail.tsx
gtk4-app/: .gitignore  Cargo.toml  README.md  build.rs
gtk4-app/resources/: com.github.claudecontexttracker.desktop  style.css
gtk4-app/src/: main.rs  notifications.rs  settings.rs  window.rs
gtk4-app/src/api/: mod.rs  pocketbase.rs
gtk4-app/src/cli/: commands.rs  mod.rs
gtk4-app/src/db/: connection.rs  mod.rs  repository.rs  schema.rs
gtk4-app/src/models/: context_section.rs  fact.rs  mod.rs  project.rs  session.rs
gtk4-app/src/monitor/: extractor.rs  mod.rs  scorer.rs  watcher.rs
gtk4-app/src/utils/: markdown.rs
gtk4-app/src/views/: context_editor.rs  dashboard.rs  facts_list.rs  mod.rs  project_detail.rs  session_monitor.rs
pocketbase/: .dockerignore  Dockerfile  README.md
pocketbase/pb_migrations/: 1703000000_initial_schema.js
