[package]
name = "claude-context-tracker"
version = "0.1.0"
edition = "2021"
authors = ["Claude Context Tracker Contributors"]
description = "Native GTK4 application for managing Claude Code context across projects"
license = "MIT"

[dependencies]
# GTK4 and libadwaita bindings
gtk = { version = "0.8", package = "gtk4", features = ["v4_12"] }
adw = { version = "0.6", package = "libadwaita", features = ["v1_4"] }
glib = "0.19"
gio = "0.19"

# Database - embedded SQLite
rusqlite = { version = "0.31", features = ["bundled", "chrono"] }
r2d2 = "0.8"
r2d2_sqlite = "0.24"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Date/time handling
chrono = { version = "0.4", features = ["serde"] }

# Logging
log = "0.4"
env_logger = "0.11"

# Markdown rendering/export
pulldown-cmark = "0.9"

# XDG directories for storing database
dirs = "5.0"

# UUID generation for record IDs
uuid = { version = "1.6", features = ["v4", "serde"] }

[build-dependencies]
glib-build-tools = "0.19"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true
